AND-3689: fixed alignment on iPhone6 and 6+

--- a/ArticleTemplates/assets/scss/modules/witness/_contribute.scss
+++ b/ArticleTemplates/assets/scss/modules/witness/_contribute.scss
@@ -77,10 +77,11 @@ Display a call-to-action asking for contributions to a Guardian Witness assignme
             @include mq($from: col2) {
                 bottom: 1px;
             }
-            @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-                @include mq($to: col2) {
-                    bottom: 0px;
-                }
+            @media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) {
+                bottom: 0;
+            }
+            @media screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) {
+                bottom: 0;
             }
         }
         background: transparent url('../img/guardianwitness.png') no-repeat 0 50%;
